--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: circleci/ruby:2.4.1-node-browser
     
     steps:
-      - checkout
+      - checkout:
       
       
       - run:
