--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,7 @@ jobs:
       - image: circleci/ruby:2.4.1-node-browser
     
     steps:
-      - checkout:
-      
-      
+      - checkout
       - run:
           name: Which bundler?
           command: echo Hello, world
