--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,15 @@
-version: 2
+version: 2.1
+orbs:
+  ruby: circleci/ruby@0.1.2 
+
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.4.1-node-browser
-    
+      - image: circleci/ruby:2.6.3-stretch-node
+    executor: ruby/default
     steps:
+      - checkout
       - run:
           name: Which bundler?
-          command: echo Hello, world
-      
-      -run: 
-          name: Print the current time
-          command: date
+          command: bundle -v
+      - ruby/bundle-install
